# il-ur5e-checkers-sim

./: .gitignore  .gitmodules  README.md  docker-compose.yml  frames_2026-03-02_07.15.16.gv  train_bc.py
.devcontainer/: devcontainer.json
datasets/: episode_20260423_210006.npz  episode_20260423_211817.npz  episode_20260423_212411.npz  episode_20260423_213747.npz  episode_20260424_234447.npz  episode_20260428_170316.npz  episode_20260428_171733.npz  episode_20260428_171957.npz  episode_20260428_172231.npz
docker/: Dockerfile  ros_entrypoint.sh
models/: bc_policy.pt
models/scripts/: train_bc.py
old_datasets_21/: episode_20260428_163614.npz
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/install/ur_description/share/ur_description/cmake/: ur_descriptionConfig-version.cmake  ur_descriptionConfig.cmake
ros_ws/install/ur_description/share/ur_description/config/: initial_positions.yaml
ros_ws/install/ur_description/share/ur_description/environment/: ament_prefix_path.dsv  path.dsv
ros_ws/log/: latest_build
ros_ws/src/ur5e_checkers_description/: CMakeLists.txt  package.xml
ros_ws/src/ur5e_checkers_description/config/: controllers.yaml  ur5e_controllers.yaml
ros_ws/src/ur5e_checkers_description/config/ur5e/: visual_parameters.yaml
ros_ws/src/ur5e_checkers_description/launch/: ur5e_gz_bringup.launch.py
ros_ws/src/ur5e_checkers_description/scripts/: robot_description_publisher.py
ros_ws/src/ur5e_checkers_description/urdf/: ur5e_gz.urdf.xacro
src/checkers_gz_plugins/: CMakeLists.txt  package.xml
src/checkers_gz_plugins/src/: checkers_piece_state_plugin.cpp
src/data_collection/: package.xml  setup.py
src/data_collection/data_collection/: bc_policy_node.py  data_collection_node.py  move_targets_to_il_pose.py  pick_place_executor_node.py  train_bc.py
src/ur5e_checkers_bringup/: package.xml  setup.cfg  setup.py
src/ur5e_checkers_bringup/config/: robot_description_kinematics.yaml  servo.yaml
src/ur5e_checkers_bringup/scripts/: train_dqn.py
src/ur5e_checkers_bringup/ur5e_checkers_bringup/: board.py  checkers_game_node.py  checkers_move_ui.py  checkers_piece_manager.py  dqn_action_space.py  dqn_model.py  dqn_policy_node.py  dqn_utils.py  magic_piece_mover_node.py  move_target_node.py  player_move_helper_node.py  test_checkers.py
src/ur5e_checkers_bringup/ur5e_checkers_bringup/config/: controllers.yaml  controllers_gripper.yaml  ur_servo.yaml
src/ur5e_checkers_bringup/ur5e_checkers_bringup/launch/: sim.launch.py  sim_gripper.launch.py  ur_moveit_sim.launch.py
src/ur5e_checkers_bringup/ur5e_checkers_bringup/models/black_checker/: model.config  model.sdf
src/ur5e_checkers_bringup/ur5e_checkers_bringup/models/black_king/: model.config  model.sdf
src/ur5e_checkers_bringup/ur5e_checkers_bringup/models/checkers_board/: model.config  model.sdf
src/ur5e_checkers_bringup/ur5e_checkers_bringup/models/red_checker/: model.config  model.sdf
src/ur5e_checkers_bringup/ur5e_checkers_bringup/models/red_king/: model.config  model.sdf
src/ur5e_checkers_bringup/ur5e_checkers_bringup/urdf/: robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5e_gripper.urdf.xacro  ur5e_gz.urdf.xacro
src/ur5e_checkers_bringup/ur5e_checkers_bringup/worlds/: checkers_world.sdf
(+205 files in other folders)
