<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>checkers_gz_plugins</name>
  <version>0.0.0</version>
  <description>Gazebo system plugins for named checkers piece state publishing.</description>
  <maintainer email="colinmcginty02@gmail.com">Colin McGinty</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Gazebo vendor packages for ROS 2 Jazzy / Harmonic -->
  <depend>gz_cmake_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_sim_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>