<?xml version="1.0"?>
<package format="3">
  <name>ur5e_checkers_description</name>
  <version>0.0.0</version>
  <description>UR5e Checkers simulation description + Gazebo + ros2_control bringup</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps used by the launch + xacro -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>control_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Needed because you include UR xacro -->
  <depend>ur_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
